<resources>
    <string name="app_name">FightBackFoods</string>
    <string name="action_settings">Settings</string>
    <string name="prompt_double_back_exit">Press back again to exit</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Title Holder</string>
    <string name="nav_header_subtitle">Sub Title Holder</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="title_activity_login">Sign in</string>
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password</string>
    <string name="action_log_in">Log in</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="action_forgot_password">Forgot your Password?</string>
    <string name="dont_have_an_account">Not a user yet? </string>
    <string name="action_sign_up">Sign Up</string>
    <string name="error_invalid_email">This email address is invalid</string>
    <string name="error_invalid_password">This password is too short</string>
    <string name="error_incorrect_password">This password is incorrect</string>
    <string name="error_field_required">This field is required</string>
    <string name="permission_rationale">"Contacts permissions are needed for providing email
        completions."
    </string>
    <string name="facebook_app_id">1374094252690066</string>
    <string name="fb_login_protocol_scheme">fb1374094252690066</string>
    <string name="title_activity_sign_up">Sign Up</string>
    <string name="first_name">First Name</string>
    <string name="last_name">Last Name</string>
    <string name="birthday">Birthday</string>
    <string name="zipcode">ZipCode</string>
    <string name="gender">Gender</string>
    <string name="cancer_type">Cancer Type</string>
    <string name="cancer_stage">Cancer Stage</string>
    <string name="mobility">Mobility</string>
    <string name="current_treatment">Current Treatment</string>
    <string name="food_restrictions">Food Restrictions</string>
    <string name="submit">Submit</string>
    <string name="please_enter_email">Please enter email</string>
    <string name="send">Send</string>
    <string name="cancel">Cancel</string>
    <string name="reset_password">Reset Password</string>
    <string name="please_wait">Please wait...</string>
    <string name="uploading_image">Uploading image...</string>
    <string name="title_home">Home</string>
    <string name="title_food">Food</string>
    <string name="title_lifestyle">Lifestyle</string>
    <string name="title_community">Community</string>
    <string name="title_dashboard">Dashboard</string>
    <string name="title_notifications">Notifications</string>
    <string name="title_education">Education</string>
    <string name="title_food_nutrient_report">Food Nutrient Report</string>
    <string name="title_goals">Goals</string>
    <string name="title_activity">Activity</string>
    <string name="title_save">Save</string>
    <string name="title_inbox">Inbox</string>
    <string name="title_account_settings">Account Settings</string>
    <string name="title_contact_us">Contact Us</string>
    <string name="logout">Logout</string>
    <string name="title_trending">Trending</string>
    <string name="title_profile_settings">Profile Settings</string>
    <string name="journal_header">How are you feeling today?</string>
    <string name="mentally_i_am">Mentally I am</string>
    <string name="physically_i_am">Physically I am</string>
    <string name="today_could_use_some">Today I could use some:</string>
    <string name="jor_could_use_some_hint_text">ex. Encouragement, Help with groceries</string>
    <string name="add_journal_entry">+ Add Journal Entry (optional)</string>
    <string name="close_journal_entry">+ Close Journal Entry Window</string>
    <string name="log_journal_update">Log a daily Journal update</string>
    <string name="post_to_fb">Post to FB</string>
    <string name="action_post">Post</string>
    <string name="user_profile_photo">""</string>
    <string name="im_feeling">I\'m Feeling</string>
    <string name="article_sample_value">Good nutrition is one of the keys to a healthy life. You can improve your health by keeping a balanced diet. You should eat foods that contain vitamins and minerals. This includes fruits, vegetables, whole grains, dairy, and a source of protein. Ask yourself the following questions. If you answer yes to any of them, talk to your doctor about your health. You may need to improve your eating habits for better nutrition.</string>
    <string name="daily_score">Daily Score</string>
    <string name="weekly_score">Weekly Score</string>
    <string name="add_food">Add a Food</string>
    <string name="add_drink">Add a Drink</string>
    <string name="my_foods">My Foods</string>
    <string name="text_separator">\u0020—\u0020</string>
    <string name="rice_and_beans">Rice and beans with chicken</string>
    <string name="food_qty_sample">2 servings | 100 cal</string>
    <string name="my_drinks">My Drinks</string>
    <string name="my_daily_goals">My Daily Goals</string>
    <string name="good_nutrients">Good Nutrients</string>
    <string name="calories">Calories </string>
    <string name="proteins">Proteins</string>
    <string name="carbs">Carbs</string>
    <string name="bad_nutrients">Bad Nutrients</string>
    <string name="saturated_fat">Saturated Fat</string>
    <string name="trans_fat">Trans Fat</string>
    <string name="summary">Summary</string>
    <string name="super_foods">Super Foods</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="weight">Weight</string>
    <string name="choose">Choose</string>
    <string name="height">Height</string>
    <string name="alphabet_only">alphabet only</string>
    <string name="daily">Daily</string>
    <string name="weekly">Weekly</string>
    <string name="nutrition">Nutrition</string>
    <string name="mind_body_soul">Mind, Body and Soul</string>
    <string name="added_sugar">Added Sugar</string>
    <string name="suggestions">Suggestions</string>
    <string name="your_protein_is_low">Your protein is low.</string>
    <string name="increase_your_proteins">Increase your protein. Here are some foods high in proteins. yada yada , yada yada, bara bara, hoho, koko.</string>
    <string name="your_suger_is_hi">Your sugar is high.</string>
    <string name="increase_your_foods">Increase your foods high in protein. Here are some foods high in proteins. yada yada , yada yada, bara bara, hoho, koko.</string>
    <string name="title_activity_add_food">Add Food</string>
    <string name="tab_text_1">Tab 1</string>
    <string name="tab_text_2">Tab 2</string>
    <string name="tab_text_3">Tab 3</string>
    <string name="section_format">Hello World from section: %1$d</string>
    <string name="recent">Recent</string>
    <string name="frequent">Frequent</string>
    <string name="meals">Meals</string>
    <string name="recipes">Recipes</string>
    <string name="quick_add">Quick Add</string>
    <string name="search_for_a_food">Search for a Food</string>
    <string name="title_nutrient_report">Nutrient Report</string>
    <string name="all">All</string>
    <string name="pre">PRE</string>
    <string name="during">during</string>
    <string name="post">POST</string>
    <string name="select_week">Select Week</string>
    <string name="article_content_sample1">Maintaining a healthy weight might lower the risk of various types of cancer, ... </string>
    <string name="article_content_sample2">Regular self-exams and screenings for various types of cancers — such as ...</string>
    <string name="article_content_sample3">Maintaining a healthy weight might lower the risk of various types of cancer, including cancer of the breast, prostate, lung, colon and kidney.

Physical activity counts, too. In addition to helping you control your weight, physical activity on its own might lower the risk of breast cancer and colon cancer.

Adults who participate in any amount of physical activity gain some health benefits. But for substantial health benefits, strive to get at least 150 minutes a week of moderate aerobic activity or 75 minutes a week of vigorous aerobic physical activity. You can also do a combination of moderate and vigorous activity. As a general goal, include at least 30 minutes of physical activity in your daily routine — and if you can do more, even better.</string>
    <string name="article_content_sample4">Regular self-exams and screenings for various types of cancers — such as cancer of the skin, colon, cervix and breast — can increase your chances of discovering cancer early, when treatment is most likely to be successful. Ask your doctor about the best cancer screening schedule for you.

Take cancer prevention into your own hands, starting today. The rewards will last a lifetime.</string>
    <string name="lifestyle_score">Lifestyle Score</string>
    <string name="mind_body_soul_score_percent_n">Mind: %1$f% | Body: %2$f% | Soul: %3$f%</string>
    <string name="mind">Mind</string>
    <string name="weekly_goal">Weekly Goal</string>
    <string name="hrs">hrs</string>
    <string name="back">Back</string>
    <string name="fat">Fat</string>
    <string name="number_of_servings">Number of Servings</string>
    <string name="serving_size">Serving Size</string>
    <string name="percent_of_daily_goals">Percent of Your Daily Goals</string>
    <string name="nutrient_report_note">* Percent Daily Values are based on 2,000 calories diet. Your daily values may be higher or lower depending on your calories needs.</string>
    <string name="title_add_drink">Add Drink</string>
    <string name="change_unit">Change Unit</string>
    <string name="measures_label_n_unit_n_value">%1$s (%2$.2f%3$s)</string>
    <string name="diet_add_successful">Food Added to Diet</string>
    <string name="title_daily_summary">Daily Summary</string>
    <string name="today">Today</string>
    <string name="good_job">Good Job</string>
    <string name="keep_it_up_click_for_recipes">Keep it up. Click for more recipes</string>
    <string name="calories_underlined"><u>Calories:</u></string>
    <string name="protein_underlined"><u>Protein:</u></string>
    <string name="water_underlined"><u>Water:</u></string>
    <string name="carbs_underlined"><u>Carbs:</u></string>
    <string name="saturated_underlined"><u>Saturated Fat:</u></string>
    <string name="trans_underlined"><u>Trans Fat:</u></string>
    <string name="sugar_underlined"><u>Sugar:</u></string>
    <string name="super_foods_underlined"><u>Super Foods:</u></string>
    <string name="keep_an_eye_carbs">Keep an eye on your carbs. Click for suggestions to increase your carbs.</string>
    <string name="keep_an_eye_sat_fat">Keep an eye on your saturated fat. Click for suggestions to decrease your  saturated fat.</string>
    <string name="keep_an_eye_trans_fat">Keep an eye on your Trans Fat. Click for suggestions to decrease your  trans fat.</string>
    <string name="keep_an_eye_sugar">Keep an eye on your sugar. Click for suggestions to decrease your  sugar</string>
    <string name="click_suggestion_super_foods">Click for suggestions on what super food to take</string>
    <string name="avoid">Avoid</string>
    <string name="high_avoid">High - Avoid</string>
    <string name="zero_of_two">(0 / 2)</string>
    <string name="your_daily_goal">Your Daily Goals</string>
    <string name="view_nutrition_facts">View Nutrition Facts</string>
    <string name="serving_cal_n">%1$s servings / %2$s</string>
    <string name="title_food_detail">Food Detail</string>
    <string name="lorem_sh">Lorem ipsum dolor sit amet, vis vide voluptua ne, in soleat legimus singulis sed. Mei eius error aliquando an, ius et erroribus definitiones, zril salutandi per in. Sit id mucius accusata comprehensam</string>
</resources>