<?xml version="1.0" encoding="utf-8"?>
<android.support.v4.widget.NestedScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_marginTop="20dp"
    app:layout_behavior="@string/appbar_scrolling_view_behavior"
    tools:context=".SignUpActivity"
    tools:showIn="@layout/activity_sign_up">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_margin="20dp">


        <RelativeLayout
            android:id="@+id/lay_user_details"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp">

            <TextView
                android:id="@+id/tv_email"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginBottom="15dp"
                android:layout_marginTop="10dp"
                android:text="@string/prompt_email" />

            <TextView
                android:id="@+id/tv_password"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentLeft="true"
                android:layout_below="@+id/tv_email"
                android:layout_marginBottom="15dp"
                android:text="@string/prompt_password" />

            <TextView
                android:id="@+id/tv_first_name"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@+id/tv_password"
                android:layout_marginBottom="15dp"
                android:text="@string/first_name" />

            <TextView
                android:id="@+id/tv_last_name"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@+id/tv_first_name"
                android:layout_marginBottom="15dp"
                android:text="@string/last_name" />

            <TextView
                android:id="@+id/tv_birthday"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@+id/tv_last_name"
                android:layout_marginBottom="15dp"
                android:text="@string/birthday" />

            <TextView
                android:id="@+id/tv__zipcode"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@+id/tv_birthday"
                android:layout_marginBottom="15dp"
                android:text="@string/zipcode" />

            <TextView
                android:id="@+id/tv_gender"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@+id/tv__zipcode"
                android:layout_marginBottom="15dp"
                android:text="@string/gender" />

            <TextView
                android:id="@+id/tv_cancer_type"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@+id/tv_gender"
                android:layout_marginBottom="15dp"
                android:text="@string/cancer_type" />

            <TextView
                android:id="@+id/tv_cancer_stage"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@+id/tv_cancer_type"
                android:layout_marginBottom="15dp"
                android:text="@string/cancer_stage" />

            <TextView
                android:id="@+id/tv_mobility"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@+id/tv_cancer_stage"
                android:layout_marginBottom="15dp"
                android:text="@string/mobility" />

            <TextView
                android:id="@+id/tv_current_treatment"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@+id/tv_mobility"
                android:layout_marginBottom="15dp"
                android:text="@string/current_treatment" />

            <TextView
                android:id="@+id/tv_food_restrictions"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@+id/tv_current_treatment"
                android:layout_marginBottom="15dp"
                android:text="@string/food_restrictions" />

            <EditText
                android:id="@+id/et_email"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignBaseline="@+id/tv_email"
                android:layout_alignLeft="@+id/et_current_treatment"
                android:layout_marginBottom="15dp"
                android:background="@drawable/edit_text_border_color"
                android:ems="10"
                android:fontFamily="sans-serif"
                android:inputType="textEmailAddress"
                android:singleLine="true" />

            <EditText
                android:id="@+id/et_password"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_alignBaseline="@+id/tv_password"
                android:layout_alignLeft="@+id/et_email"
                android:layout_marginBottom="15dp"
                android:background="@drawable/edit_text_border_color"
                android:ems="10"
                android:inputType="textPassword" />

            <EditText
                android:id="@+id/et_first_name"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_alignBaseline="@+id/tv_first_name"
                android:layout_alignLeft="@+id/et_current_treatment"
                android:layout_marginBottom="15dp"
                android:background="@drawable/edit_text_border_color"
                android:ems="10"
                android:inputType="textPersonName" />

            <EditText
                android:id="@+id/et_last_name"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_alignBaseline="@+id/tv_last_name"
                android:layout_alignLeft="@+id/et_current_treatment"
                android:layout_marginBottom="15dp"
                android:background="@drawable/edit_text_border_color"
                android:ems="10"
                android:inputType="textPersonName" />

            <EditText
                android:id="@+id/et_birthday"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_alignBaseline="@+id/tv_birthday"
                android:layout_alignLeft="@+id/et_current_treatment"
                android:layout_marginBottom="15dp"
                android:background="@drawable/edit_text_border_color"
                android:ems="10"
                android:inputType="textPersonName" />

            <EditText
                android:id="@+id/et_zipCode"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_alignBaseline="@+id/tv__zipcode"
                android:layout_alignLeft="@+id/et_current_treatment"
                android:layout_marginBottom="15dp"
                android:background="@drawable/edit_text_border_color"
                android:ems="10"
                android:inputType="textPersonName" />

            <Spinner
                android:id="@+id/sp_gender"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_alignLeft="@+id/et_current_treatment"
                android:layout_alignTop="@+id/tv_gender" />

            <Spinner
                android:id="@+id/sp_cancer_stage"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_alignLeft="@+id/et_current_treatment"
                android:layout_alignTop="@+id/tv_cancer_stage" />

            <EditText
                android:id="@+id/et_current_treatment"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_alignBaseline="@+id/tv_current_treatment"
                android:layout_marginLeft="20dp"
                android:layout_toRightOf="@+id/tv_current_treatment"
                android:background="@drawable/edit_text_border_color"
                android:ems="10"
                android:inputType="textPersonName" />

            <EditText
                android:id="@+id/et_mobility"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_alignBaseline="@+id/tv_mobility"
                android:layout_alignLeft="@+id/et_current_treatment"
                android:background="@drawable/edit_text_border_color"
                android:ems="10"
                android:inputType="textPersonName" />

            <Spinner
                android:id="@+id/sp_cancer_type"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_alignLeft="@+id/et_current_treatment"
                android:layout_alignTop="@+id/tv_cancer_type" />

            <EditText
                android:id="@+id/et_food_restrictions"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_alignBaseline="@+id/tv_food_restrictions"
                android:layout_alignLeft="@+id/et_current_treatment"
                android:layout_below="@+id/tv_food_restrictions"
                android:background="@drawable/edit_text_border_color"
                android:ems="10"
                android:inputType="textPersonName" />


        </RelativeLayout>

        <Button
            android:id="@+id/btn_submit"
            style="?android:textAppearanceSmall"
            android:layout_width="200dp"
            android:layout_height="40dp"
            android:layout_alignParentBottom="false"
            android:layout_below="@+id/lay_user_details"
            android:layout_centerHorizontal="true"
            android:layout_marginBottom="25dp"
            android:layout_marginTop="20dp"
            android:background="#14c945"
            android:text="@string/submit"
            android:textColor="#fff"
            android:textStyle="bold" />

    </RelativeLayout>

</android.support.v4.widget.NestedScrollView>