<?xml version="1.0" encoding="utf-8"?>
<android.support.v7.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:card_view="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    card_view:cardElevation="2dp"
>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"

        android:padding="10dp">

        <TextView
            android:id="@+id/tv_my_food_name"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="0"
            android:text="@string/rice_and_beans"
            android:textColor="@color/black"/>

        <TextView
            android:id="@+id/textView7"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="0"
            android:text="@string/text_separator" />

        <TextView
            android:id="@+id/tv_my_food_qty"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="10dp"
            android:layout_weight="1"
            android:ellipsize="end"
            android:maxLines="1"
            android:text="@string/food_qty_sample"
            android:textColor="@android:color/darker_gray"
            android:textSize="@dimen/item_my_food_qty_text"
            android:textStyle="italic" />

        <TextView
            android:id="@+id/tv_my_food_score"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="0"
            android:text="B"
            android:textColor="@color/orange"
            android:textStyle="bold"/>
    </LinearLayout>


</android.support.v7.widget.CardView>